# syncalong

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  benchmark.py
docs/: benchmarks.md  cli.md  contributing.md  how-it-works.md  index.md  installation.md  library.md  remote.md  requirements.txt
docs/reference/: align.md  formatter.md  index.md  lyrics.md  pipeline.md  remote.md  server.md  textnorm.md  transcribe.md  vocal_separator.md
docs/superpowers/plans/: 2026-07-21-remote-transcription.md
docs/superpowers/specs/: 2026-07-21-remote-transcription-design.md
src/syncalong/: __init__.py  align.py  cli.py  formatter.py  lyrics.py  pipeline.py  remote.py  server.py  textnorm.py  transcribe.py  vocal_separator.py
tests/: conftest.py  test_core.py  test_remote.py  test_server.py
