[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncalong"
description = "Forced-alignment library and CLI that timestamps lyrics against an audio file, exporting LRC"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "wickeddoc", email = "doc@foobar.lu" }]
keywords = [
    "lyrics",
    "alignment",
    "forced-alignment",
    "whisper",
    "lrc",
    "karaoke",
    "subtitles",
    "speech-to-text",
    "transcription",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
whisper = ["openai-whisper>=20231117"]
server = [
    "openai-whisper>=20231117",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
vocal-separation = [
    "demucs>=4.0",
    # Demucs writes its stems through torchaudio, which on current torch
    # delegates audio saving to torchcodec; without it, separation fails at
    # write time ("TorchCodec is required for save_with_torchcodec").
    "torchcodec>=0.1",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "black>=24.0",
    "pyright>=1.1",
    "build>=1.0",
    "twine>=5.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://github.com/wickeddoc/syncalong"
Documentation = "https://syncalong.readthedocs.io"
Repository = "https://github.com/wickeddoc/syncalong"
Issues = "https://github.com/wickeddoc/syncalong/issues"
Changelog = "https://github.com/wickeddoc/syncalong/blob/master/CHANGELOG.md"

[project.scripts]
syncalong = "syncalong.cli:main"
syncalong-serve = "syncalong.cli:serve_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
syncalong = ["py.typed"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g. tag `v0.1.0` -> version `0.1.0`).
# Untagged builds get a `.devN+g<hash>` suffix. `fallback_version` is used
# when building outside a git checkout (e.g. from a source tarball).
fallback_version = "0.0.0"

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need docstrings on every function.
"tests/*" = ["D"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.pyright]
include = ["src"]
pythonVersion = "3.9"
typeCheckingMode = "standard"
